<resources>
    <string name="app_name">VibeNote</string>
</resources>